Fix spacing of recipe card on Dashboard:

--- a/src/assets/scss/05-utilities/_utilities.layout.scss
+++ b/src/assets/scss/05-utilities/_utilities.layout.scss
@@ -27,6 +27,10 @@
 	margin-bottom: 0;
 }
 
+.row--space-evenly {
+	justify-content: space-evenly;
+}
+
 .u-align-items-center {
 	align-items: center;
 }
